tests/parser/errors/match_case_pattern_shape.mochi
let v = 0
let r = match v { 1 + 2 => "huh" _ => "ok" }
